k8s/app1-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
  namespace: app1
spec:
  selector:
    matchLabels:
      app: app1
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: app1
    spec:
      serviceAccountName: app1-ksa
      containers:
      - name: nginx
        image: nginx:1.16.1
        ports:
        - containerPort: 80
