k8s/app0-service.yaml

apiVersion: "v1"
kind: "Service"
metadata:
  name: app0-service
  namespace: app0
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http # adding for Istio
  selector:
    app: app0
  type: ClusterIP
