k8s/app2-service.yaml

apiVersion: "v1"
kind: "Service"
metadata:
  name: app2-service
  namespace: app2
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http # adding for Istio
  selector:
    app: app2
  type: ClusterIP
