k8s/app0-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app0-vs
  namespace: app0
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/multi-app-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        port:
          number: 80
        host: app0-service
